erDiagram
  USER_SESSION ||--o{ ASSESSMENT : owns
  USER_SESSION ||--o| SUBSCRIPTION : has
  USER_SESSION ||--o{ PAYMENT_EVENT : receives
  ASSESSMENT ||--o{ ASSESSMENT_STEP_SUBMISSION : records
  ASSESSMENT ||--o| ASSESSMENT_RESULT : produces

  USER_SESSION {
    uuid id PK
    char session_token_hash UK
    timestamptz expires_at
    timestamptz revoked_at
  }
  ASSESSMENT {
    uuid id PK
    uuid user_session_id FK
    enum status
    enum current_step
    int version
    enum gender
    enum goal
    smallint age
    decimal height_cm
    decimal weight_kg
    decimal target_weight_kg
    enum activity_level
  }
  ASSESSMENT_STEP_SUBMISSION {
    uuid id PK
    uuid assessment_id FK
    enum step_key
    varchar idempotency_key UK
    char request_hash
    jsonb payload
    int assessment_version
  }
  ASSESSMENT_RESULT {
    uuid id PK
    uuid assessment_id FK,UK
    varchar algorithm_version
    decimal bmi
    int recommended_daily_calories
    date predicted_target_date
    jsonb weekly_projection
  }
  SUBSCRIPTION {
    uuid id PK
    uuid user_session_id FK,UK
    enum status
    timestamptz started_at
    timestamptz expires_at
  }
  PAYMENT_EVENT {
    uuid id PK
    uuid user_session_id FK
    varchar external_event_id UK
    enum status
    char request_hash
    jsonb payload
  }
